[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultsens-sdk"
version = "0.1.0"
description = "VaultSens SDK for API key uploads and file management"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "VaultSens" }
]
keywords = ["vaultsens", "sdk", "storage", "upload"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = ["requests>=2.31"]

[project.urls]
Homepage = "https://vaultsens-sdk-docs.vercel.app/"
Repository = "https://github.com/vaultsens/vaultsens-sdk-python"

[tool.setuptools.packages.find]
include = ["vaultsens_sdk*"]
